# todomvc_testing

./: .gitignore  config.local.env.example  config.prod.env  pyproject.toml
etc/selenoid/: compose.yaml
run/: pull_browser_images.sh
tests/: conftest.py  test_draft_validation.py  test_features_at_filter_all.py
todomvc_testing/helpers/: js_script_creation.py
todomvc_testing/model/: __init__.py  app.py  config.py  todomvc.py
