[tool.poetry]
name = "todomvc_testing"
version = "0.1.0"
description = ""
authors = ["Igor' Vlasov <igorkram777@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selene = {version = "^1.0.2", allow-prereleases = true}
pydantic = "^1.8.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-xdist = "^1.31.0"
allure-pytest = "^2.8.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
